--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,28 @@
 
 	<title>Starter Node and Angular</title>
 
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
+	<script src="//d3js.org/d3.v3.min.js"></script>
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
 	<script src="libs/angular-route/angular-route.min.js"></script>
 
+	<script src="js/app.js"></script>
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/NeedCtrl.js"></script>
-	<script src="js/services/NeedService.js"></script>
 	<script src="js/controllers/HistoryCtrl.js"></script>
+
+	<script src="js/services/NeedService.js"></script>
 	<script src="js/services/HistoryService.js"></script>
+	<script src="js/services/LocationService.js"></script>
+	<script src="js/services/TreeService.js"></script>
+
 	<script src="js/appRoutes.js"></script>
-	<script src="js/app.js"></script>
 </head>
 <body ng-app="sampleApp" ng-controller="NeedController">
 <div class="container">
