--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,36 @@
 
 	<title>Starter Node and Angular</title>
 
-
-	<!-- CSS -->
+	<script src="libs/jquery/dist/jquery.min.js"></script>
+	<!--BOOOTSTRAP-->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
-	<link rel="stylesheet" href="css/header.css">
+	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<script src="libs/d3js/d3.v3.min.js"></script>
 	<script src="libs/canvas-to-blob/canvas-toBlob.js"></script>
 	<script src="libs/file-saver/FileSaver.min.js"></script>
 	<script src="libs/blob/Blob.js"></script>
 
+	<!--CUSTOM STYLES-->
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/header.css">
+
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
 	<script src="libs/angular-route/angular-route.min.js"></script>
+
+	<!--GOOGLE CHARTS-->
+	<script src="libs/angular-google-chart/ng-google-chart.min.js"></script>
 
 	<script src="js/app.js"></script>
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/NeedCtrl.js"></script>
 	<script src="js/controllers/HistoryCtrl.js"></script>
+	<script src="js/controllers/StatisticsCtrl.js"></script>
+	<script src="js/controllers/PieChartCtrl.js"></script>
+	<script src="js/controllers/ColumnChartCtrl.js"></script>
+
 
 	<script src="js/services/NeedService.js"></script>
 	<script src="js/services/HistoryService.js"></script>
