--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
-	<script src="libs/d3js/d3.v3.min.js"></script>
+	<script src="libs/d3/d3.js"></script>
+<!--
 	<script src="libs/canvas-to-blob/canvas-toBlob.js"></script>
+-->
 	<script src="libs/file-saver/FileSaver.min.js"></script>
 	<script src="libs/blob/Blob.js"></script>
 
@@ -27,11 +29,17 @@
 	<!--GOOGLE CHARTS-->
 	<script src="libs/angular-google-chart/ng-google-chart.min.js"></script>
 
+	<!--CSV IMPORT-->
+	<script src="libs/angular-csv-import/dist/angular-csv-import.min.js"></script>
+	<!--MOMENT JS-->
+	<script src="libs/moment/min/moment.min.js"></script>
+
 	<script src="js/app.js"></script>
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/NeedCtrl.js"></script>
-	<script src="js/controllers/HistoryCtrl.js"></script>
+	<script src="js/controllers/NeedsCtrl.js"></script>
+	<script src="js/controllers/ImportCtrl.js"></script>
 	<script src="js/controllers/StatisticsCtrl.js"></script>
 	<script src="js/controllers/PieChartCtrl.js"></script>
 	<script src="js/controllers/ColumnChartCtrl.js"></script>
