--- a/public/navbar.html
+++ b/public/navbar.html
@@ -11,9 +11,9 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/needs">Needs</a></li>
-				<li><a href="/history">History</a></li>
-				<li><a href="/statistics">Statistics</a></li>
+				<li><a href="/needs">Потребности</a></li>
+				<li><a href="/import">Импорт</a></li>
+				<li><a href="/statistics">Статистика</a></li>
 			</ul>
 			<form class="navbar-form navbar-right">
 				<input type="text" class="form-control" placeholder="Search...">
